make hydrate callable

--- a/test.html
+++ b/test.html
@@ -165,7 +165,7 @@
               .then(function (result) {
                 const view = result.view;
                 // Use the Vega view api to insert data
-                console.log(scatterPlotData);
+                // console.log(scatterPlotData);
                 var vegaData = {};
                   //console.log('what is here ', index1);
                   scatterPlotData[0].forEach((element2, index2) => {
